--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,25 @@
     <div class="mt-4 p-5 bg-primary text-white rounded">
       <h1>The Blog App</h1>
       <p>This is a simple app for creating blog posts and viewing the posts of other users.</p>
+      <button id="goHome" class="btn btn-success">Home</button>
+      <button id="goProfile" class="btn btn-success">Profile</button>
+      <button id="logOut" class="btn btn-secondary">Log Out</button>
     </div>
-    <div id="posts" class="row list-group">
-      
+    <div class="row">
+      <form>
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input type="text" class="form-control" id="title">
+        </div>
+        <div class="mb-3">
+          <label for="body" class="form-label">Body</label>
+          <input type="text" class="form-control" id="body">
+        </div>
+        <button id="createPost" type="submit" class="btn btn-primary">Create Post</button>
+      </form>
+    </div>
+    <div id="posts" class="mt-4 row list-group">
+
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
